--- a/css/styles.css
+++ b/css/styles.css
@@ -3,11 +3,16 @@
     --title-font-color-white: #FFFFFF;
     --title-font-color-blaсk: #212121;
     --accent-color: #2196F3;
+    --logo-header-font-color:#000000;
+
+    --background-color-dark-grey:#2F303A;
+    --background-color-grey: #F5F4FA;
+    --background-color-white: #F5F5F5;
 }
 
 body {
-    background-color: #F5F5F5;
-    color: #757575;
+    background-color: var(--background-color-white);
+    color: var(--main-font-color);
     font-family: 'Roboto', 'Open Sans';
     }
 
@@ -18,25 +23,23 @@ ul {
 /* Навігація */
 
 .nav-basa {
-    color: #000000;
+    color: var(--logo-header-font-color);
     font-family: 'Raleway';
-    font-style: normal;
     font-size: 26px;
-    line-height: 1,2;
+    line-height: 1.2;
     letter-spacing: 0.03em;
 }
 
 .nav-white {
     color: rgba(255, 255, 255, 0.6);
-    font-style: normal;
     font-size: 14px;
-    line-height: 1,71;
+    line-height: 1.71;
     letter-spacing: 0.03em;
-    
+    font-style: normal;
         
 }
 
-.nav-white:hover, .nav-white:focus {
+.current-page, .nav-white:hover, .nav-white:focus {
     color: var(--accent-color);
 }
 
@@ -47,29 +50,27 @@ ul {
 .nav-accent {
     color:var(--accent-color);
     font-family: 'Raleway';
-    font-style: normal;
     font-size: 26px;
-    line-height: 1,2;
+    line-height: 1.2;
     letter-spacing: 0.03em;
 }
 
 .nav-item {
     color:var(--title-font-color-blaсk);
-    font-style: normal;
     font-weight: 500;
     font-size: 14px;
-    line-height: 1,14;
+    line-height: 1.14;
     letter-spacing: 0.02em;
 }
 
 .pagination-item {
     color: var(--title-font-color-blaсk);
     background-color: var(--title-font-color-white);
+    font-family: inherit;
     cursor: pointer;
-    font-style: normal;
     font-weight: 500;
     font-size: 16px;
-    line-height: 1,08;
+    line-height: 1.08;
     text-align: center;
     letter-spacing: 0.03em;
 }
@@ -81,11 +82,10 @@ ul {
 }
 
 .contact {
-    color: #757575;
-    font-style: normal;
+    color: var(--main-font-color);
     font-weight: 500;
     font-size: 14px;
-    line-height: 1, 14;
+    line-height: 1.14;
     letter-spacing: 0.02em;
 }
 
@@ -98,10 +98,10 @@ ul {
 
 .button-activ {
     color: var(--title-font-color-white);
-    font-style: normal;
+    font-family: inherit;
     cursor: pointer;
     font-size: 16px;
-    line-height: 30px;
+    line-height: 1.88;
     display: flex;
     align-items: center;
     text-align: center;
@@ -114,10 +114,19 @@ ul {
 
 .address {
     color: var(--title-font-color-white);
+    font-size: 14px;
+    font-style: normal;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+}
+
+.address-footer {
+    font-family: 'Roboto';
     font-style: normal;
     font-size: 14px;
-    line-height: 1, 71;
+    line-height: 1.71;
     letter-spacing: 0.03em;
+    color: var(--title-font-color-white);
 }
 
 
@@ -125,10 +134,9 @@ ul {
 
 .main-title {
     color: var(--title-font-color-white);
-    font-style: normal;
     font-weight: 900;
     font-size: 44px;
-    line-height: 1, 36;
+    line-height: 1.36;
     text-align: center;
     letter-spacing: 0.06em;
     text-transform: uppercase;
@@ -136,25 +144,22 @@ ul {
 
 .title {
     color: var(--title-font-color-blaсk);
-    font-style: normal;
     font-size: 36px;
-    line-height: 42px;
+    line-height: 1.17;
     text-align: center;
     letter-spacing: 0.03em;
     }
 
 .title-item {
     color: var(--title-font-color-blaсk);
-    font-style: normal;
     font-size: 14px;
-    line-height: 16px;
+    line-height: 1.14;
     letter-spacing: 0.03em;
     text-transform: uppercase;
 }
 
 .title-team {
     color: var(--title-font-color-blaсk);
-    font-style: normal;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.19;
@@ -164,7 +169,6 @@ ul {
 
 .title-case {
     color: var(--title-font-color-blaсk);
-    font-style: normal;
     font-size: 18px;
     line-height: 2;
     letter-spacing: 0.06em;
@@ -177,23 +181,33 @@ ul {
 .text {  
     font-size: 14px;
     letter-spacing: 0.03em;
-    line-height: 1,71;
+    line-height: 1.71;
 }
 
 .text-work {
     font-size: 16px;
-    line-height: 1,19;
+    line-height: 1.19;
     text-align: center;
     letter-spacing: 0.03em;
 }
 
 .text-case {
     font-size: 16px;
-    line-height: 1,88;
+    line-height: 1.88;
     letter-spacing: 0.03em;
 }
 
+.section-hero {
+    background-color: var(--background-color-dark-grey);
+}
 
+.section-text {
+    background-color: var(--background-color-white);
+}
+    
+.section-team {
+    background-color: var(--background-color-grey);
+}
 
 
 
